feat: put the kernel in the filesystem instead of just appending it

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
 export PATH=$PWD/toolchain/bin/:$PATH
+export MTOOLSRC=$PWD/mtools.conf
 export TOOLCHAIN_PATH=$PWD/toolchain/
 export LIB_PATH="$PWD/lib/"
