build: add `-Wall` compiler flag

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -8,7 +8,7 @@ ASM := nasm
 
 CC := x86_64-elf-gcc
 LD := x86_64-elf-ld
-CFLAGS := -ffreestanding -nostdlib -masm=intel -fno-zero-initialized-in-bss -mno-red-zone
+CFLAGS := -ffreestanding -nostdlib -masm=intel -fno-zero-initialized-in-bss -mno-red-zone -Wall
 ISRCFLAGS := -mgeneral-regs-only
 LDFLAGS := -nostdlib -T linker.ld -Map=$(BIN_DIR)/$(IMAGE_NAME).map
 LDLIBS := -L${TOOLCHAIN_PATH}/lib/gcc/x86_64-elf/14.2.0 -lgcc
