build: disable system app stack protector

--- a/system_apps/hello_world/Makefile
+++ b/system_apps/hello_world/Makefile
@@ -1,7 +1,7 @@
 LIBC_INCLUDE := ../libc/include
 LIBC := ../libc/bin/libc.a
 
-CFLAGS := -I$(LIBC_INCLUDE) -ffreestanding -nostdlib -masm=intel -Wall -Werror -O3 -flto -static -fno-pie
+CFLAGS := -I$(LIBC_INCLUDE) -ffreestanding -nostdlib -masm=intel -Wall -Werror -O3 -flto -static -fno-pie -fno-stack-protector
 
 .PHONY: all
 all:
