feat: use libgx for the screensaver

--- a/system_apps/screensaver/Makefile
+++ b/system_apps/screensaver/Makefile
@@ -1,11 +1,14 @@
 LIBC_INCLUDE := ../libc/include
 LIBC := ../libc/bin/libc.a
 
-CFLAGS := -I$(LIBC_INCLUDE) -ffreestanding -nostdlib -masm=intel -Wall -Werror -O3 -flto -static -fno-pie -fno-stack-protector
+LIBGX_INCLUDE := ../libgx/include
+LIBGX := ../libgx/bin/libgx.a
+
+CFLAGS := -I$(LIBGX_INCLUDE) -I$(LIBC_INCLUDE) -ffreestanding -nostdlib -masm=intel -Wall -Werror -g -flto -static -fno-pie -fno-stack-protector
 
 .PHONY: all
 all:
-	gcc *.c $(LIBC) -o scr $(CFLAGS)
+	gcc *.c $(LIBC) $(LIBGX) -o scr $(CFLAGS)
 
 .PHONY: clean
 clean:
